# Latency

./: .gitignore  CONTRIBUTING.md  Config.toml.example  Dockerfile  LICENSE  README.md  package-lock.json  pending.md
docs/: fulltechnologydetails.md  prd.md  projectdetails.md  spec.md
latency-x-core/: Cargo.toml  Config.toml.example
latency-x-core/data/: ticks.csv
latency-x-core/src/: config.rs  lib.rs  main.rs  models.rs
latency-x-core/src/backtest/: gateway.rs  mod.rs
latency-x-core/src/connectors/: binance.rs  coinbase.rs  kraken.rs  mock_data.rs  mod.rs  pump.rs
latency-x-core/src/dashboard/: broadcaster_layer.rs  events.rs  mod.rs  server.rs
latency-x-core/src/execution/: mock.rs  mod.rs
latency-x-core/src/persistence/: db.rs  mod.rs
latency-x-core/src/risk/: mod.rs
latency-x-core/src/settlement/: helius.rs  mock.rs  mod.rs  pump.rs  solana.rs
latency-x-core/src/strategies/: arbitrage.rs  buy_new_token.rs  market_maker.rs  mev.rs  mod.rs
latency-x-core/tests/: connectors.rs
latency-x-dashboard/: package-lock.json  package.json  tailwind.config.js
latency-x-dashboard/src/: App.tsx  index.css
latency-x-dashboard/src/components/: Layout.tsx
latency-x-dashboard/src/components/dashboard/: LatencyChart.tsx  StatCard.tsx  TradesTable.tsx
latency-x-dashboard/src/hooks/: useWebSocket.ts
latency-x-dashboard/src/pages/: Logs.tsx  Overview.tsx  Settings.tsx  Trades.tsx
src/settlement/: mod.rs
