[package]
name = "latency-x-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "latency_x_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
env_logger = "0.9.0"
anyhow = "1.0.75"
async-trait = "0.1.77"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4"] }
solana-rpc-client = "1.18.17"
solana-rpc-client-api = "1.18.17"
solana-pubsub-client = "1.18.17"
solana-sdk = "1.18.17"
spl-token = "4.0.0"
bs58 = "0.5.1"
regex = "1.10.3"
spl-associated-token-account = "3.0.0"
borsh = "0.10.3"
solana-transaction-status = "1.18.12"
reqwest = { version = "0.11", features = ["json"] }
hmac-sha256 = "1.0"
hex = "0.4"
chrono = "0.4.35"
base64 = "0.22.1"
sha2 = "0.10.8"
hmac = "0.12"
config = "0.14.0"
helius-sdk = "0.1.0"
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { version = "4.0", features = ["derive"] }
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
metrics = "0.22.0"
metrics-exporter-prometheus = "0.13.0"
csv = "1.3.0"

[dev-dependencies]
mockall = "0.12.1"

[[bin]]
name = "latency-x-core"
path = "src/main.rs"

[[bin]]
name = "pump-trader"
path = "src/bin/pump_trader.rs"

[[bin]]
name = "latency-x-backtester"
path = "src/bin/backtester.rs"

[workspace]
